set up index with header and subtitles using foundation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,12 @@
  *
  *= require_tree .
  *= require_self
+ *= require foundation_and_overrides
+
  */
+
+/* HELPER CLASSES */
+
+.text-center {
+	text-align: center;
+}
