--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,10 @@
-<h1>Testing!</h1>
+<div class="row">
+	<h1 class="small-12 text-center columns">Women.</h1>
+</div>
+<div class="row">
+	<h2 class="small-3 text-center columns">Feminism</h2>
+	<h2 class="small-3 text-center columns">Race</h2>
+	<h2 class="small-3 text-center columns">History</h2>
+	<h2 class="small-3 text-center columns">Pop Culture</h2>
+</div>
+
