--- a/app/assets/stylesheets/influencers.scss
+++ b/app/assets/stylesheets/influencers.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the influencers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.portrait-medium {
+	height: 200px;
+}
