--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,4 +7,24 @@
 	<h2 class="small-3 text-center columns">History</h2>
 	<h2 class="small-3 text-center columns">Pop Culture</h2>
 </div>
+<div class="row">
+	<h3 class="small-12 columns text-center">
+			I'm currently reading...
+	</h3>
+	<div class="row">
+		<div class="small-4 columns text-center">
+			<img src="<%= @current_book.image %>" alt="Book Cover" class="cover-medium">
+		</div>
+		<div class="small-4 columns text-center">
+			<span class="title"><%= @current_book.title %></span><br>
+			by <%= @current_influencers.name %>
+		</div>
+		<div class="small-4 columns text-center">
+			<img src="<%= @current_influencers.image %>" alt="Author Photo" class="portrait-medium">
+		</div>
+	</div>
+</div>
+<div class="row">
+	<h3 class="small-12 columns text-center">The Library</h3>
 
+</div>
