--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,30 +1,49 @@
-<div class="row">
-	<h1 class="small-12 text-center columns">Women.</h1>
-</div>
-<div class="row">
-	<h2 class="small-3 text-center columns">Feminism</h2>
-	<h2 class="small-3 text-center columns">Race</h2>
-	<h2 class="small-3 text-center columns">History</h2>
-	<h2 class="small-3 text-center columns">Pop Culture</h2>
-</div>
-<div class="row">
-	<h3 class="small-12 columns text-center">
-			I'm currently reading...
-	</h3>
+<header>
 	<div class="row">
-		<div class="small-4 columns text-center">
-			<img src="<%= @current_book.image %>" alt="Book Cover" class="cover-medium">
-		</div>
-		<div class="small-4 columns text-center">
-			<span class="title"><%= @current_book.title %></span><br>
-			by <%= @current_influencers.name %>
-		</div>
-		<div class="small-4 columns text-center">
-			<img src="<%= @current_influencers.image %>" alt="Author Photo" class="portrait-medium">
+		<h1 class="small-12 text-center columns">Women.</h1>
+	</div>
+	<div class="row">
+		<h2 class="small-3 text-center columns">Feminism</h2>
+		<h2 class="small-3 text-center columns">Race</h2>
+		<h2 class="small-3 text-center columns">History</h2>
+		<h2 class="small-3 text-center columns">Pop Culture</h2>
+	</div>
+</header>
+<section>
+	<div class="row">
+		<h3 class="small-12 columns text-center">
+				I'm currently reading...
+		</h3>
+		<div class="row">
+			<div class="small-4 columns text-center">
+				<img src="<%= @current_book.image %>" alt="Book Cover" class="cover-medium">
+			</div>
+			<div class="small-4 columns text-center">
+				<span class="title"><%= @current_book.title %></span><br>
+				by <%= @current_influencers.name %>
+			</div>
+			<div class="small-4 columns text-center">
+				<img src="<%= @current_influencers.image %>" alt="Author Photo" class="portrait-medium">
+			</div>
 		</div>
 	</div>
-</div>
-<div class="row">
-	<h3 class="small-12 columns text-center">The Library</h3>
-
-</div>
+</section>
+<!-- CAROUSEL WITH QUOTES -->
+<section>
+	<div class="row">
+		<h3 class="small-12 columns text-center">The Influencers</h3>
+	</div>
+</section>
+<!-- SIMPLE GRID -->
+<section>
+	<div class="row">
+		<div class="small-12 columns text-center">
+			<h3>The Library</h3>
+		</div>
+	</div>
+	<div class="row">
+		<div class="small-12 columns">
+			<img src="<%= @current_book.image %>" alt="Book Cover" class="cover-medium">
+		</div>
+	</div>
+</section>
