--- a/app/assets/stylesheets/styles/_welcome.scss
+++ b/app/assets/stylesheets/styles/_welcome.scss
@@ -1,128 +1,4 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-.title {
-	text-decoration: underline;
-}
-
-.cover-large {
-	height: $large;
-}
-
-.books-carousel {
-	&.cover {
-		height: $medium;
-	}
-	&.title {
-		text-transform: uppercase;
-		font-weight: bolder;
-	}
-}
-
-.portrait-medium {
-	height: $medium;
-}
-
-.influencers-carousel {
-	&.portrait {
-		height: $medium;
-	}
-	&.name {
-		text-transform: uppercase;
-		font-weight: bolder;
-	}
-	&.quote {
-		font-style: italic;
-	}
-}
-
-.wrap {
-   overflow: hidden;
-}
-.box {
-	float: left;
-	position: relative;
-	width: 33%;
-	padding-bottom: 35%;
-	@media only screen and (max-width : 480px) {
-		/* Smartphone view: 1 tile */
-		width: 100%;
-		padding-bottom: 100%;
-	}
-	@media only screen and (max-width : 650px) and (min-width : 481px) {
-		/* Tablet view: 2 tiles */
-		width: 50%;
-		padding-bottom: 50%;
-	}
-	@media only screen and (max-width : 1050px) and (min-width : 651px) {
-		/* Small desktop / ipad view: 3 tiles */
-		width: 33.3%;
-		padding-bottom: 33.3%;
-	}
-	@media only screen and (max-width : 1290px) and (min-width : 1051px) {
-		/* Medium desktop: 4 tiles */
-		width: 25%;
-		padding-bottom: 25%;
-	}
-}
-.boxInner {
-   position: absolute;
-   left: 10px;
-   right: 10px;
-   top: 10px;
-   bottom: 10px;
-   overflow: hidden;
-}
-.boxInner img {
-   width: 100%;
-}
-.boxInner .titleBox {
-   position: absolute;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   background: #000;
-   background: rgba(0, 0, 0, 0.5);
-   color: #FFF;
-   padding: 10px;
-   text-align: center;
-   text-transform: uppercase;
-}
-body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
-   margin-bottom: 0;
-}
-.book-cover, .book-blurb {
-	height: 400px;
-	width: 264px;
-	display: inline-block;
-	&:nth-child(n+3) {
-		display: none;
-	}
-}
-.book-cover {
-	overflow: hidden;
-	position: relative;
-}
-
-.book-blurb {
-	border:1px solid red;
-}
-
-.quote {
-	font-size: 2em;
-	font-style: italic;
+.book__title {
 	font-weight: bold;
-}
-
-.book {
-	position: absolute;
-	width: 100%;
-}
-
-.next, .previous {
-	height: 100px;
-}
-
-.carousel {
+	text-decoration: underline;
 }
