--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
 			<p>
 				by 
 				<% @current_influencers.each do |influencer| %>
-					<%= influencer.name %><br>
+					<span class="book__author"><%= influencer.name %></span><br>
 				<% end %>
 			</p>
 		</div>
@@ -25,17 +25,11 @@
 		<h3 class="small-12 columns text-center">The Influencers</h3>
 	</div>
 	<div class="row">
-		<div class="small-12 columns">
-			<div class="wrap">
-				<% @influencers.each do |influencer| %>
-					<div class="box">
-				    <div class="boxInner">
-				      <img src="<%= influencer.image %>" alt="Author Portrait" class="cover-medium"/>
-				      <div class="titleBox"><%= influencer.name %></div>
-				    </div>
-				  </div>
-				<% end %>
-			</div>
+		<!-- <ul class="small-block-grid-2 large-block-grid-4 influencer-grid"> -->
+		<div class="influencer-grid">
+			<% @influencers.each do |influencer| %>
+		      <div class="influencer-grid__tile"><img src="<%= influencer.image %>" alt="Author Portrait" class="influencer-grid__portrait" /></div>
+			<% end %>
 		</div>
 	</div>
 </section>
