animate header and add bg photo to reading section

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,7 @@
 
 
 @import "base/globals.scss";
+@import "base/mixins.scss";
 @import "base/normalize.scss";
 @import "foundation_and_overrides";
 @import "application.scss";
