--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -1,3 +1,4 @@
+$bluegreen: #18E5D7;
 $hotpink: #F56AD6;
 $pink: #FF5E8F;
 $green: #6AD77F;
@@ -5,6 +6,11 @@ $yellow: #E2F359;
 $peach: #FFD2BF;
 $brown: #4C3F39;
 $white: #FFFFFF;
+$gray: #FCFCFC;
+$transparentHeader: rgba(255, 255, 255, 0.9);
+$transparentWhite: rgba(255, 255, 255, 0.5);
+$transparentHotPink: rgba(245, 106, 214, 0.5);
+$transparentPink: rgba(255, 94, 143, 0.5);
 
 $headerFont: 'Montserrat', sans-serif;
 $bodyFont: 'Lato', sans-serif;
