--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-	padding: 60px 0;
+	padding: 60px 20px;
 }
 
 section {
@@ -26,7 +26,7 @@ h1, h2, h3, h4 {
 h1 {
 	font-size: 72px;
 	color: $peach;
-	@include animation(changeAndFadeColors 6s infinite);
+	@include animation(changeAndFadeColors 20s infinite);
 }
 
 
