make carousel slides work and add css for dots

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,11 @@ header {
 	padding: 60px 20px;
 }
 
+footer {
+	padding: 40px 20px;
+	text-align: center
+}
+
 section {
 	padding: 60px 0;
 	margin: 0;
