--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -7,8 +7,8 @@ $peach: #FFD2BF;
 $brown: #4C3F39;
 $white: #FFFFFF;
 $gray: #FCFCFC;
-$transparentHeader: rgba(255, 255, 255, 0.9);
-$transparentWhite: rgba(255, 255, 255, 0.5);
+$transparentWhite: rgba(255, 255, 255, 0.8);
+$transparentBlack: rgba(51, 51, 51, 0.8);
 $transparentHotPink: rgba(245, 106, 214, 0.5);
 $transparentPink: rgba(255, 94, 143, 0.5);
 
