--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -33,23 +33,25 @@
 		</div>
 	</div>
 </section>
-<section>
+<section class="library">
 	<div class="row">
 		<div class="small-12 columns">
-			<h3>The Library</h3>
-			<div class="book-carousel" data-equalizer>
-				<i class="previous fa fa-angle-left fa-5x"></i>
+			<div class="book-carousel text-center">
+				<i class="previous-icon fa fa-angle-left fa-5x"></i>
 				<% @books.each do |book| %>
-					<div class="slide <%= book.id %>" data-equalizer-watch>
-						<img src="<%= book.image %>" alt="Book Cover" class="book-carousel__cover">
-						<div class="book-carousel__blurb" data-equalizer-watch>
-							<span>"This will be a quote from the book that will be top row."</span><br>
-							<a href="/books/<%=book.id%>">My thoughts on <%= book.title %></a>
-						</div>
+					<div class="slide" id="<%= book.id %>">
+						<a href="/books/<%=book.id%>"><img src="<%= book.image %>" alt="Book Cover" class="book-carousel__cover"></a>
+						<span class="book-carousel__blurb">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere fringilla purus. Nullam leo quam, vestibulum et facilisis ac, placerat ut enim. In vehicula ut sapien id viverra."</span>
 					</div>
 				<% end %>
-				<i class="next fa fa-angle-right fa-5x"></i>
+				<i class="next-icon fa fa-angle-right fa-5x"></i>
+				<div class="book-carousel__nav">
+					<% @books.length.times do |dot| %>
+						<div class="book-carousel__nav__dot"></div>
+					<% end %>
+				</div>
 			</div>
 		</div>
 	</div>
 </section>
+<footer>Bloggity blah blah</footer>
