--- a/app/assets/stylesheets/styles/_welcome.scss
+++ b/app/assets/stylesheets/styles/_welcome.scss
@@ -7,6 +7,13 @@
 	font-style: italic;
 }
 
+.purpose-statement {
+	font-size: 20px;
+	&:nth-of-type(2) {
+		margin-bottom: 0;
+	};
+}
+
 .influencer-grid {
 	width: 100%;
 	padding-left: 50px;
