--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,37 @@
 <header>
 	<div class="row">
-		<h1 class="small-12 text-center columns">WOMEN'S STUDIES</h1>
+		<h1 class="small-12 text-center columns">DEEP DIVE: FEMINISM</h1>
 	</div>
 </header>
-<!-- ADD BIO AND QUTOES -->
+<section>
+	<div class="row text-center">
+		<div class="small-offset-2 small-8 columns end">
+			<p class="purpose-statement">It felt about time to educate myself on the issues that are most relevant to me so, here I am- and here you are.</p> 
+			<p class="purpose-statement">Race, sex, gender, feminism, pop culture, religion- it was impossible to narrow it down, so it's all here.</p>
+		</div>
+	</div>
+</section>
+<section class="library">
+	<div class="row">
+		<div class="small-12 columns">
+			<div class="book-carousel text-center">
+				<i class="previous-icon fa fa-angle-left fa-5x"></i>
+				<% @books.each do |book| %>
+					<div class="slide">
+						<a href="/books/<%=book.id%>"><img src="<%= book.image %>" alt="Book Cover" class="book-carousel__cover"></a>
+						<span class="book-carousel__blurb">"<%= book.quotes.first.quotation %>"</span>
+					</div>
+				<% end %>
+				<i class="next-icon fa fa-angle-right fa-5x"></i>
+				<div class="book-carousel__nav">
+					<% @books.each do |book| %>
+						<div class="book-carousel__nav__dot" id="<%= book.id %>"></div>
+					<% end %>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 <section>
 	<div class="row">
 		<h3 class="small-12 columns text-center">The Influencers</h3>
@@ -16,27 +44,6 @@
 		      	<div class="hide influencer-grid__bio text-center"><%= influencer.name %></div>
 		      </div>
 			<% end %>
-		</div>
-	</div>
-</section>
-<section class="library">
-	<div class="row">
-		<div class="small-12 columns">
-			<div class="book-carousel text-center">
-				<i class="previous-icon fa fa-angle-left fa-5x"></i>
-				<% @books.each do |book| %>
-					<div class="slide">
-						<a href="/books/<%=book.id%>"><img src="<%= book.image %>" alt="Book Cover" class="book-carousel__cover"></a>
-						<span class="book-carousel__blurb">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere fringilla purus. Nullam leo quam, vestibulum et facilisis ac, placerat ut enim. In vehicula ut sapien id viverra."</span>
-					</div>
-				<% end %>
-				<i class="next-icon fa fa-angle-right fa-5x"></i>
-				<div class="book-carousel__nav">
-					<% @books.each do |book| %>
-						<div class="book-carousel__nav__dot" id="<%= book.id %>"></div>
-					<% end %>
-				</div>
-			</div>
 		</div>
 	</div>
 </section>
