--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
 </section>
 <section class="library">
 	<div class="row">
-		<div class="small-12 columns">
+		<div class="small-12 columns text-center">
 			<div class="book-carousel text-center">
 				<i class="previous-icon fa fa-angle-left fa-5x"></i>
 				<% @books.each do |book| %>
