modify css for library bg image

--- a/app/assets/stylesheets/styles/_welcome.scss
+++ b/app/assets/stylesheets/styles/_welcome.scss
@@ -106,14 +106,9 @@
 ///////////
 
 section {
-	&.reading {
-		min-height: 400px;
-		background: $gray url("book-2.png") no-repeat center bottom;
-		background-size: contain;
-	}
 	&.library {
 		min-height: 400px;
-		background: url("book-1.jpeg") no-repeat center bottom;
+		background: image-url("book-1.jpeg") no-repeat center bottom;
 		background-size: cover;
 	}
 }
