--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,6 +47,32 @@
 		</div>
 	</div>
 </section>
+<section class="quotes">
+	<div class="quote js-quote-drawer" aria-controls="quote-1">
+		Leggings godard fanny pack art party craft beer intelligentsia.
+		<div class="quote__details hide" id="quote-1">
+			<p>Truffaut yr bespoke, pour-over brunch craft beer hammock shabby chic narwhal cred fixie YOLO meditation. Small batch squid kickstarter crucifix, selfies photo booth roof party gluten-free 8-bit bespoke kale chips cronut. Raw denim 90's selvage, fashion axe occupy hammock meditation brunch. Synth celiac irony, tousled lo-fi next level migas skateboard. Microdosing stumptown asymmetrical, pabst bicycle rights narwhal letterpress freegan. Pour-over seitan salvia swag listicle, vice hashtag mlkshk. Chambray four dollar toast distillery chicharrones, chillwave beard post-ironic poutine blue bottle banh mi mixtape.</p>
+		</div>
+	</div>
+	<div class="quote js-quote-drawer" aria-controls="quote-2">
+		Pitchfork food truck yuccie, swag selvage banh mi put a bird on it typewriter seitan.
+		<div class="quote__details hide" id="quote-2">
+			<p>Hammock venmo everyday carry, +1 aesthetic banh mi mlkshk brooklyn kitsch. Chillwave fingerstache street art master cleanse, wolf distillery truffaut offal cronut. Fashion axe microdosing ennui, dreamcatcher austin migas cold-pressed chambray flexitarian messenger bag cred tote bag venmo brunch. Twee brooklyn kitsch, semiotics vice banjo pug VHS ethical ugh organic meditation tofu vinyl. Humblebrag gochujang literally next level artisan, meh portland beard biodiesel mlkshk austin asymmetrical forage blue bottle banh mi. Cray brunch retro craft beer four loko plaid organic bicycle rights flannel. Small batch migas gastropub hashtag narwhal synth.</p>
+		</div>
+	</div>
+	<div class="quote js-quote-drawer" aria-controls="quote-3">
+		Franzen artisan occupy, beard street art fixie before they sold out tousled hoodie skateboard thundercats.
+		<div class="quote__details hide" id="quote-3">
+			<p>Migas mumblecore bicycle rights art party, chartreuse brooklyn bitters. IPhone migas hoodie biodiesel gluten-free. Freegan fashion axe before they sold out, listicle literally hashtag meggings. Tilde plaid listicle yr. Pop-up fixie venmo, fingerstache microdosing try-hard messenger bag health goth iPhone schlitz. Viral kitsch mumblecore literally, artisan keytar pop-up disrupt etsy. Artisan biodiesel aesthetic, YOLO pour-over mustache asymmetrical cray yr wayfarers.</p>
+		</div>
+	</div>
+	<div class="quote js-quote-drawer" aria-controls="quote-4">
+		Intelligentsia tacos sustainable, mlkshk chambray fixie franzen deep v keffiyeh lo-fi. 
+		<div class="quote__details hide" id="quote-4">
+			<p>3 wolf moon keffiyeh flannel knausgaard blue bottle hashtag fashion axe, kombucha roof party chia direct trade. Chartreuse marfa green juice leggings bushwick, skateboard kombucha beard selvage meh stumptown umami post-ironic distillery. Sustainable blog synth mixtape chambray, ennui gentrify intelligentsia lumbersexual retro schlitz vinyl lo-fi. Put a bird on it photo booth blue bottle VHS, retro whatever cardigan keffiyeh food truck fanny pack polaroid vegan. Single-origin coffee tattooed PBR&B post-ironic ethical. Art party 3 wolf moon you probably haven't heard of them, put a bird on it hammock hoodie taxidermy ugh aesthetic bushwick echo park neutra bitters pabst sriracha. Affogato ennui hashtag, marfa vice keytar wolf asymmetrical photo booth street art mumblecore poutine austin meh.</p>
+		</div>
+	</div>
+</section>
 <footer>
 	<div class="row">
 		<div class="small-6 columns">
